# sphinx.rfc2119

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  code.rst  conf.py  index.rst  introduction.rst  pyproject.toml  requirement_directives.rst  requirement_list_directives.rst  requirements.rst  rfc2119.py  setup.py  sphinx_rfc2119.py
.github/workflows/: ci.yml  python-publish.yml
_static/css/: rfc2119.css
_templates/: layout.html
docs/: Makefile  conf.py  requirement_directives.rst  requirement_list_directives.rst
docs/_static/css/: rfc2119.css
src/sphinx_rfc2119/: __init__.py  _make_admonition.py
