[project]
name = "sphinx_rfc2119"
version = "0.0.10"
description = "RFC2119 directives for Sphinx documentation"
authors = [
    {name = "Chris Gough",email = "christopher.d.gough-pypi@gmail.com"},
]
dependencies = [
    "Sphinx",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "GPLv3"}
keywords = ["RFC2119 directives Sphinx docutils"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 2.7",
]
[project.urls]
Homepage = "https://github.com/monkeypants/sphinx.rfc2119"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
